--- a/css/popup.scss
+++ b/css/popup.scss
@@ -1,12 +1,28 @@
 body{
-    width: 300px;
+    width: 302px;
     background: #333;
     user-select: none;
-}
-
-ul, html{
     margin: 0;
     padding: 0;
+}
+
+ul{
+    margin: 3px;
+    padding: 0;
+}
+
+.header{
+    color: #fff;
+    letter-spacing: .1em;
+    background: #666;
+    padding: 5px;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 300;
+    #key{
+        font-size: 18px;
+        text-transform: capitalize;
+    }
 }
 
 ul > li.frame_theme{
@@ -26,7 +42,9 @@ ul > li.frame_theme{
         border-color: #4cdc31;
     }
     .theme_title{
-        display: block
+        display: block;
+        font-weight: 200;
+        font-size: 16px;
     }
     .color{
         position: absolute;
